# clipscribe

./: .coverage  .cursorignore  .deployignore  .dockerignore  .env  .env.backup  .gitignore  .pre-commit-config.yaml  100_PERCENT_CONFIDENCE_CERTIFICATION.md  ALPHA_RELEASE_SUMMARY.md  BASELINE_VALIDATION_RESULTS.md  BENCHMARK_REPORT.md  CHANGELOG.md  CHIMERA_INTEGRATION_PROMPT.md  CLEANUP_PLAN.md  CLEANUP_REPORT_NOV4.md  CLUSTERING_THRESHOLD_SOLUTION.md  COLLABORATOR_SETUP.md  COMPLETE_AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONSULTANT_ACTION_PLAN.md  CONTINUATION_FOR_NEXT_SESSION.md  CONTINUATION_PROMPT.md  CONTRIBUTING.md  CRITICAL_FIXES_NEEDED.md  CUDN_SOLUTION_FOUND.md  DEEP_RESEARCH_PLAN.md  DEMO_RECORDING_PLAN.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_TO_VPS.md  DOCS_CLEANUP_CHECKLIST.md  DOCUMENTATION_AUDIT_FINDINGS.md  DOCUMENTATION_CLEANUP_COMPLETE.md  Dockerfile  Dockerfile.api  Dockerfile.gpu  Dockerfile.job  Dockerfile.station10  (+108 more)
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  pull_request_template.md
20250823_youtube_7r-qOjUOjbs/: chimera_format.json  entities.json  manifest.json  metadata.json  relationships.json  report.md  transcript.json  transcript.txt
20250823_youtube_Nr7vbOSzpSk/: chimera_format.json  entities.json  manifest.json  metadata.json  relationships.json  report.md  transcript.json  transcript.txt
20250823_youtube_tjFNZlZEJLY/: chimera_format.json  entities.json  manifest.json  metadata.json  relationships.json  report.md  transcript.json  transcript.txt
PROMETHEUS/: README_master_governance.mdc  ROADMAP.md  core_identity.mdc  documentation_standards.mdc  financial_modeling_revenue_projections.md  go_to_market_execution_plan.md  market_analysis_competitive_intelligence.md  testing_standards.mdc  this_is_how_we_make_1_million_dollars.md
chimerarules/: README.mdc  ai-gemini-integration.mdc  ai-xai-integration.mdc  analytic-tradecraft-sop.mdc  backend-fastapi.mdc  core-identity.mdc  cost-optimized-extraction.mdc  critical-files-checklist.mdc  database-selection.mdc  docker-devops.mdc  documentation-management.mdc  documentation-updates.mdc  file-organization.mdc  frontend-nextjs.mdc  integrated-reporting.mdc  intelligence-frameworks.mdc  knowledge-graph-kuzu.mdc  prompt-evaluation.mdc  sat-analytics.mdc  security-patterns.mdc  testing-patterns.mdc  troubleshooting-guide.mdc  visualization-diagrams.mdc
cursor_rule_templates/: README.md  api_patterns.mdc  core_identity.mdc
data/: station10.db
demo_output/: batch_entity_analysis_20250625_215522.csv  batch_entity_analysis_20250625_215522.json  batch_entity_analysis_20250625_215522.md  batch_entity_analysis_20250625_215522.xlsx
deploy/: MODAL_README.md  README.md  README_GPU_DEPLOYMENT.md  cloudbuild-gpu-simple.yaml  cloudbuild-gpu.yaml  deploy_gpu.sh  deploy_vertex_ai.sh  quality_improvements.py  setup_cost_alerts.py  station10_modal.py  submit_vertex_ai_job.py  test_gpu.sh  vertex_ai_worker.py  worker_gpu.py
docker/: nginx.conf  supervisord.conf
docs/: ALPHA_TESTING_GUIDE.md  API.md  API_QUICKSTART.md  ARCHITECTURE.md  ASYNC_MONITOR_ARCHITECTURE.md  BACKEND_VALIDATION_v2.19.5.md  CLI.md  CLI_REFERENCE.md  COMPREHENSIVE_TEST_MATRIX.md  CORE_EXCELLENCE_IMPLEMENTATION_PLAN.md  COST_ANALYSIS.md  DEMONSTRATION_DECK.md  DEMO_PLAN.md  DEVELOPMENT.md  DOCUMENTATION_AUDIT_2025_07_01.md  DOCUMENTATION_CLEANUP_SUMMARY.md  ENHANCED_METADATA_SPECIFICATIONS.md  EXTRACTION_TECHNOLOGY.md  FUTURE_EXTRACTION_FEATURES.md  GEMINI_DATE_EXTRACTION_PLAN.md  GETTING_STARTED.md  GOVERNMENT_VIDEO_SOURCES.md  GROK_ADVANCED_FEATURES.md  GROK_BEST_PRACTICES_IMPLEMENTATION.md  IAM_PERMISSIONS_VERIFICATION.md  INTEGRATION.md  LOCAL_PROCESSING.md  OUTPUT_FILE_STANDARDS.md  OUTPUT_FORMAT.md  OUTPUT_FORMATS.md  PERFORMANCE_BENCHMARKS.md  PLATFORMS.md  PRD_API_ABSTRACTION_LAYER.md  PRD_MULTIPASS_EXTRACTION.md  PRD_RATE_LIMITING_TOS_COMPLIANCE.md  PRD_VOXTRAL_CONFIDENCE_SCORING.md  PRD_VOXTRAL_DIRECT_UPLOAD.md  PRD_VOXTRAL_INTEGRATION.md  PRD_VOXTRAL_WORD_TIMESTAMPS.md  PRE_UPLOAD_VIDEOS.md  (+25 more)
examples/: README.md  advanced_extraction_demo.py  advanced_features_demo.py  batch_processing.py  cli_usage.py  cost_optimization.py  demo.py  dynamic_extraction_demo.py  extraction_comparison.py  multi_platform_demo.py  multi_video_collection_demo.py  output_formats.py  pbs_fast_batch.py  quick_start.py  structured_output_demo.py  test_improvements.py  v22_preview.py  video_intelligence_demo.py  video_mode_demo.py
research/: STORY1_AI_COMPANIES_FINAL_VIDEO_LIST.md  STORY1_FINAL_30_VIDEOS.json  STORY1_FINAL_30_VIDEOS.md  STORY1_FINAL_70_VIDEOS.md  grok_story1_ai_companies.json  grok_story2_defense_tech.json  grok_story3_supply_chain.json  grok_story4_cartel_ops.json  story1_ai_companies_video_candidates.md
scripts/: Dockerfile  analyze_entity_sources.py  collect_pbs_newshour_urls.py  comprehensive_assessment.py  configure_r2_lifecycle.py  convert_to_chimera.py  convert_to_gephi.py  cost_simulator.py  create_beta_token.py  create_output_api.py  create_output_dashboard.py  create_token_job.py  debug_grok_long_transcript.py  debug_grok_response.py  deploy.sh  deploy_cloud_run_jobs.sh  download_remaining_videos.py  filter_knowledge_graph.py  fix_all_truncations.py  generate_validation_report.py  load_test_api.py  load_validated_topics.py  log_rotate.sh  monitor_production.py  pre_upload_test_videos.py  process_with_caffeinate.py  run_baseline_tests.py  run_small_batch_test.py  run_tui.py  setup_compute_engine_worker.sh  setup_domain.py  setup_gcp_project.py  setup_staging.py  setup_vertex_ai.py  station10-bot.service  test_94min_pegasus_validation.py  test_batch_processing.py  test_complete_hybrid_workflow.py  test_components_separately.py  test_controversial_content.py  (+64 more)
src/: .env  clip_utils.py  clipscribe.py  config.py  error_handling.py  post_processing_gemini.py  transcription.py
static_web/: index.html
streamlit_app/: ClipScribe_Mission_Control.py  README.md
tests/: __init__.py  conftest.py  helpers.py  test_post_processing.py  test_transcription.py  test_youtube_downloader.py
(+1705 files in other folders)
