[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "clipscribe"
version = "2.29.7"
description = "ClipScribe - AI-powered video intelligence tool for extracting knowledge from video content"
authors = ["Zac Forristall <zforristall@gmail.com>"]
readme = "README.md"
license = "Proprietary"
repository = "https://github.com/bubroz/clipscribe"
keywords = ["video", "intelligence", "temporal", "AI", "Gemini", "knowledge extraction", "timeline", "ARGOS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "clipscribe", from = "src"}]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
google-generativeai = "^0.8.2"
pydantic = "^2.8.2"
rich = "^13.8.0"
networkx = "^3.3"
spacy = "^3.7.5"
transformers = "^4.44.2"
torch = {version = "^2.4.0"}
gliner = "^0.2.10"
yt-dlp = "^2025.1.15"
youtube-search-python = "^1.6.6"
aiohttp = "^3.10.5"
python-dotenv = "^1.0.1"
streamlit = "^1.33.0"
plotly = "^5.21.0"
pdfkit = "^1.0.0"
tenacity = "^8.2.3"
google-cloud-aiplatform = "^1.104.0"
beautifulsoup4 = "^4.13.4"
structlog = "^25.4.0"
textual = "^5.2.0"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
google-cloud-storage = "^2.17.0"
redis = "^5.0.7"
rq = "^1.16.2"
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
matplotlib = "^3.10.3"
pytest-mock = "^3.14.1"
ruff = "^0.5.7"

[tool.poetry.scripts]
clipscribe = "clipscribe.commands.cli:run_cli"
clipscribe-api = "clipscribe.api.app:run"
clipscribe-worker = "clipscribe.api.worker:run"

[tool.poetry.extras]
ml = ["nltk", "spacy", "textstat", "textblob", "numpy", "pandas"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
pytest-timeout = "^2.2.0"
coverage = "^7.4.1"

[tool.poetry.urls]
Homepage = "https://github.com/bubroz/clipscribe"
Documentation = "https://github.com/bubroz/clipscribe#readme"
Repository = "https://github.com/bubroz/clipscribe.git"
Changelog = "https://github.com/bubroz/clipscribe/blob/main/CHANGELOG.md" 