[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "clipscribe"
version = "3.1.0"
description = "Professional intelligence extraction from audio/video files. GPU transcription (Modal A10G / M3 Max Metal) + xAI Grok analysis. File-first CLI, GCS-first API with presigned uploads."
authors = ["Zac Forristall <zforristall@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bubroz/clipscribe"
keywords = [
    "video-intelligence", "entity-extraction", "knowledge-graph",
    "whisperx", "xai-grok", "modal-labs", "speaker-diarization",
    "provider-abstraction", "file-processing", "gcs-storage",
    "relationship-mapping", "temporal-analysis", "nlp",
    "intelligence-analysis", "grok-api", "prompt-caching",
    "gpu-acceleration", "m3-max", "metal-acceleration",
    "fastapi", "saas-api", "research-tools",
    "geolocation", "osint", "geoint", "drone-telemetry"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
packages = [{include = "clipscribe", from = "src"}]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "src/clipscribe/api",  # Deprecated API layer
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Ignore line-too-long for now, will fix in cleanup

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "clipscribe.utils.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "clipscribe.extractors.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "clipscribe.retrievers.universal_video_client"
ignore_errors = true

[[tool.mypy.overrides]]
module = "clipscribe.retrievers.youtube_client"
ignore_errors = true

[[tool.mypy.overrides]]
module = "clipscribe.retrievers.video_retriever"
ignore_errors = true

[[tool.mypy.overrides]]
module = "clipscribe.retrievers.vertex_ai_transcriber"
ignore_errors = true

[[tool.mypy.overrides]]
module = "clipscribe.retrievers.gemini_pool"
ignore_errors = true

[[tool.mypy.overrides]]
module = "clipscribe.retrievers.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "clipscribe.tui.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "clipscribe.commands.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "clipscribe.models"
ignore_errors = true

[[tool.mypy.overrides]]
module = "clipscribe.config.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies - always required
click = "^8.1.7"
google-generativeai = "^0.8.2"
pydantic = "^2.8.2"
rich = "^13.8.0"
networkx = "^3.3"
aiohttp = "^3.10.5"
python-dotenv = "^1.0.1"
tenacity = "^8.2.3"
beautifulsoup4 = "^4.13.4"
structlog = "^25.4.0"
pydantic-settings = "^2.5.2"
psutil = "^7.0.0"

# Optional ML dependencies - install with `poetry install -E ml`
spacy = {version = "^3.7.5", optional = true}
transformers = {version = "^4.44.2", optional = true}
torch = "^2.4.0"
gliner = {version = "^0.2.10", optional = true}
pyannote-audio = "^3.1.0"

# Optional visualization dependencies - install with `poetry install -E viz`
plotly = {version = "^5.21.0", optional = true}
pdfkit = {version = "^1.0.0", optional = true}

# Optional enterprise dependencies - install with `poetry install -E enterprise`
google-cloud-aiplatform = {version = "^1.104.0", optional = true}
google-cloud-storage = {version = "^2.17.0", optional = true}
google-cloud-tasks = {version = "^2.16.0", optional = true}

# Optional API dependencies - install with `poetry install -E api`
fastapi = {version = "^0.115.0", optional = true}
uvicorn = {version = "^0.30.0", extras = ["standard"], optional = true}
redis = {version = "^5.0.7", optional = true}
rq = {version = "^1.16.2", optional = true}
httpx = ">=0.27"

# Optional TUI dependencies - install with `poetry install -E tui`
textual = {version = "^5.2.0", optional = true}

# Optional web interface - install with `poetry install -E web`
streamlit = {version = "^1.33.0", optional = true}
google-cloud-run = "^0.10.19"
reportlab = "^4.4.4"
pandas = "^2.2.3"
whisperx = {version = "^3.7.0", python = ">=3.11,<3.14"}
modal = "^1.2.0"
python-docx = "^1.2.0"
python-pptx = "^1.0.2"
openpyxl = "^3.1.5"
yt-dlp = "^2025.11.12"
youtube-search-python = "^1.6.6"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
matplotlib = "^3.10.3"
pytest-mock = "^3.14.1"
ruff = "^0.5.7"
google-cloud-aiplatform = "^1.121.0"
jiwer = "^4.0.0"

[tool.poetry.scripts]
clipscribe = "clipscribe.commands.cli:run_cli"
clipscribe-api = "clipscribe.api.app:run"
clipscribe-worker = "clipscribe.api.worker:run"
clipscribe-validate = "scripts.validate_production:main"

[tool.poetry.extras]
# Optional dependency groups for different use cases
ml = ["spacy", "transformers", "torch", "gliner"]
viz = ["plotly", "pdfkit"]
enterprise = ["google-cloud-aiplatform", "google-cloud-storage", "google-cloud-tasks"]
api = ["fastapi", "uvicorn", "redis", "rq", "httpx"]
tui = ["textual"]
web = ["fastapi", "uvicorn", "redis", "rq", "streamlit"]
all = ["spacy", "transformers", "torch", "gliner", "plotly", "pdfkit", "google-cloud-aiplatform", "google-cloud-storage", "fastapi", "uvicorn", "redis", "rq", "textual", "streamlit"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
pytest-timeout = "^2.2.0"
coverage = "^7.4.1"

[tool.poetry.urls]
Homepage = "https://github.com/bubroz/clipscribe"
Documentation = "https://github.com/bubroz/clipscribe#readme"
Repository = "https://github.com/bubroz/clipscribe.git"
Changelog = "https://github.com/bubroz/clipscribe/blob/main/CHANGELOG.md" 